# bootcamp

./: Lab_5_metrics.ipynb  README.md  funcao.py  teste.ipynb
Datasets/: medicine.csv  questions-words.csv  titanic.csv  trainees.csv  turnover.csv
Labs/: Lab - Teste.ipynb  Lab 0 - Python.ipynb  Lab 1 - E2D pre-processing titanic.ipynb  Lab 1 - pre-processing titanic.ipynb  Lab 1 - pre_processing_airbnb.ipynb  Lab 1.ipynb  Lab 10 - ML pt_2.ipynb  Lab 2 - EDA Turnover.ipynb  Lab 2.ipynb  Lab 3 - Distributions.ipynb  Lab 3.ipynb  Lab 4 - Data Collection.ipynb  Lab 4 Module_1_Review.ipynb  (+15 more)
Labs/Simple Pipeline/simple-pipeline/: README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
Labs/Simple Pipeline/simple-pipeline/conf/: logging.yml
Labs/Simple Pipeline/simple-pipeline/conf/base/: catalog.yml  parameters.yml  parameters_modeling.yml
Labs/Simple Pipeline/simple-pipeline/data/01_raw/: MELBOURNE_HOUSE_PRICES_LESS.pq
Labs/Simple Pipeline/simple-pipeline/docs/source/: conf.py  index.rst
Labs/Simple Pipeline/simple-pipeline/notebooks/: EDA.ipynb
Labs/Simple Pipeline/simple-pipeline/src/app/: __init__.py  app.py
Labs/Simple Pipeline/simple-pipeline/src/simple_pipeline/: __main__.py  pipeline_registry.py
Labs/Simple Pipeline/simple-pipeline/src/simple_pipeline/pipelines/modeling/: __init__.py  nodes.py  pipeline.py
Labs/Simple Pipeline/simple-pipeline/tests/: test_run.py
Labs/Simple Pipeline/simple-pipeline/tests/pipelines/data_science/: test_pipeline.py
Labs/Simple Pipeline/simple-pipeline/tests/pipelines/modeling/: test_pipeline.py
(+113 files in other folders)
